static/main.css
body {
  background-color: black;
  font-family: 'Sono', monospace;
  font-size: 14px;
  color: white;
}

h1, h2 {
  font-family: 'VT323', monospace;
}

main {
    max-width:60ex;
    margin: auto;
}


* {
  box-sizing: border-box;
}

h1 {
  text-shadow: 1px 1px #00ff11;
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  text-align: center;
  font-size: 2.5em;
}

h2 {
  text-shadow: 1px 1px cyan;
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  text-align: center;
  font-size: 1.7em;
}

bio {
    color:black;
    font-style: italic;;
    border: solid 2px white;
    border-radius: 5px;
    padding: 10px;
}

input[type=text], select, textarea, input[type=search], input[type=password], input[type=date] {
  width: 100%;
  appearance: textfield;
  padding: 5px;
  border: 1px solid #00ff11;
  border-radius: 4px;
  resize: none;
  background-color: black;
  font-family: 'Cutive Mono', monospace;
  font-size: 16px;
  text-transform: lowercase;
  color:#00ff11;
  margin-bottom: 0.5em;
}

select {
  appearance: none;
  cursor: pointer;
}

::placeholder {
  color: #007808;
}

.error, input[type=text].error {
  border: 2px solid red;
}

.container {
  border-radius: 5px;
  background-color: black;
  padding: 20px;
}

.col-15 {
  float: left;
  width: 15%;
  margin-top: 3px;
  word-break: break-all;
}

.col-20 {
  float: left;
  width: 20%;
  margin-top: 3px;
  word-break: break-all;
  padding-right: 0.4em;
}

.col-25 {
  float: left;
  width: 25%;
  margin-top: 3px;
  word-break: break-word;
}

.col-30 {
  float: left;
  width: 30%;
  margin-top: 3px;
  word-break: break-all;
}

.col-70 {
  width: 70%;
  float: left;
  margin-top: 3px;
  word-break: break-all;
}

.col-50 {
  float: left;
  width: 50%;
  margin-top: 3px;
  word-break: break-all;
}

.col-100 {
  float: left;
  width: 100%;
  margin-top: 3px;
}

.col-85 {
  float: left;
  width: 75%;
  margin-top: 3px;
  word-break: break-all;
}

/* Clear floats after the columns */
.row::after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
/*
@media screen and (max-width: 600px) {
  .col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}
*/

@media screen and (max-width: 600px) {
  #post-button {
    width: 100%;
    height: 2em;
  }
  .primary-button {
    width: 100%;
    height: 2em;
  }
  .secondary-button {
    position: relative;
    height: 2em;
    width: 50%;
    left:-25%;
  }
}
*/

.header {
    font-weight: bold;
}

.header breadcrumb {
    text-align: left;
}

.header user_greeting {
    float: right;
}

.postcard {
    border: 1px solid white;
    position: relative;
    margin: auto;
    border-radius: 0em;
    background-color: black;
    padding: 0.2em 0.5em 1em 0.5em;
}

.activity-card {
    border: 1px solid white;
    min-height:7ex;
    position: relative;
    margin: auto;
    padding: 5px;
    background-color: black;
}

.unseen {
  font-weight: bold;
}

.userinfo {
    margin-bottom: 10px;
}

.name {
  font-weight: bold;
  text-transform: uppercase;
  color: #00ff11;
  font-family: 'VT323',monospace;
  font-size: 1.3em;
  word-break: break-word;
  margin-top: 0px;
  margin-bottom: 0.1em;
}

.name a {
  color: #00ff11;
  text-decoration: none;
}

.mention {
  color: cyan;
  text-decoration: underline wavy 0.8px;
  font-weight: bold;
}

.tabs {
  --bar-color: #00ff11;
  display: flex;
  background-color: #black;
  border: 1px solid #00ff11;
  border-radius: 5px;
  font-size: 16px;
  font-family: 'VT323',monospace;
  color: #00ff11;
  margin-bottom: 0.5em;
}

.tabs > .tab {
  flex: 1;
  display: flex;
}

.tab > .tab-input {
  width: 0;
  height: 0;
  margin: 0;
  display: none;
}

.tab > .tab-box {
  padding: .3rem;
  width: 100%;
  text-align: center;
  border: 2px solid rgba(0,0,0,0);
  border-radius: 5px;
}

.tab > .tab-input:checked + .tab-box {
  background: #00ff11;
  color:black;
  border-color: var(--bar-color);
}

.time-since {
    font-size: 0.8em;
    position:absolute;
    bottom:0.6em;
    right:0.6em;
    color:gray;
}

.dropdown {
  display: inline-block;
  position: relative;
  font-family: 'VT323', monospace;
  font-size: 1.2em;
  padding: 5px;
  background-color: white;
  float: left;
  width: 48%;
  margin-top: 0.3em;
  margin-right:1%;
  word-break: break-all;
}

.dropdown-full {
  display: inline-block;
  position: relative;
  font-family: 'VT323', monospace;
  font-size: 1.2em;
  padding: 5px;
  background-color: white;
  float: left;
  width: 100%;
  margin-top: 0.3em;
  word-break: break-all;
}

.dropbtn {
  border: 0px;
  background: none;
  font-family: 'VT323', monospace;
  font-size: 1.2em;
  color: black;
}

.dropdown-options {
  list-style-type: none;
  display: none;
  position: absolute;
  font-size: 1.2em;
  left: 0%;
  overflow: auto;
  background-color: white;
  padding: 10px;
  line-height: 4ex;
  width: 100%;
  z-index:1;
}

.dropdown-options a {
  display: block;
  text-decoration: none;
  color:black;
}

.show {display:block;}

.primary-button {
  padding: 2px 8px;
  margin-bottom: 0px;
  margin-top: 8px;
  text-align: center;
  border-radius: 5px;
  color: black;
  background-color: #dbdbdb;
  background: #dbdbdb;
  cursor: pointer;
  display: inline;
  text-decoration: none;
  font-family: 'VT323', monospace;
  float: right;
  padding:0.2em 1em;
  margin-right:0px;
  font-size: 1.5em;
}

.secondary-button {
  background: none;
  border: none;
  float: right;
  margin-top: 0.3em;
  font-size: 1.5em;
  text-decoration: underline;
  font-family: 'VT323', monospace;
  cursor: pointer;
  float: right;
    color: white;
}

.action-buttons {
  float:right;
  margin-top: 5px;
}

.tertiary-button {
  text-align: center;
  border-radius: 5px;
  padding: 0.2em;
  margin-bottom: 0.3em;
  color: black;
  background-color: #dbdbdb;
  background: #dbdbdb;
  cursor: pointer;
  display: inline;
  text-decoration: none;
  font-family: 'VT323', monospace;
}

.tertiary-button-disabled {
  text-align: center;
  border-radius: 5px;
  padding: 0.2em;
  margin-bottom: 0.3em;
  border-left: solid 2px #878787;
  border-top: solid 2px #878787;
  border-bottom: solid 2px #363636;
  border-right: solid 2px #363636;
  background-color: #5e5e5e;
  color: #363636;
  display: inline;
  text-decoration: none;
  font-family: 'VT323', monospace;
}

.primary-button, .tertiary-button {
  border-left: solid 2px white;
  border-top: solid 2px white;
  border-bottom: solid 2px gray;
  border-right: solid 2px gray;
}

.primary-button a, .tertiary-button a {
  text-decoration: none;
  color: black;
}

.smalllink {
  font-size: 0.8em;
  float: right;
  margin-top: 5px;
}

.list-name {
  padding: 0.1em 0.2em;
  text-align: center;
  cursor: pointer;
  border:dotted 1px white;
  line-height: 1.1em;
  font-family: 'VT323',monospace;
  font-size: 0.9em;
  color: white;
  background-color: black;
  word-break: break-word;
}

.item-type {
  color: cyan;
  text-transform: uppercase;
  font-family: 'VT323',monospace;
  font-size: 1.3em;
  cursor: pointer;
  border: 0px;
  padding: 0px;
  background: none;
  cursor: default;
}

.vertical-center {
  padding:0.5em;
}

.user-name {
  background-color: #ff5ef2;
  text-align: center;
  cursor: pointer;
  border-radius: 5px;
  border:solid 0px black;
  font-family: 'VT323',monospace;
  color: black;
  border-left: solid 2px #faacf4;
  border-top: solid 2px #faacf4;
  border-bottom: solid 2px #91338a;
  border-right: solid 2px #91338a;
}

a {
  color: #00ff11;
}

.rating {
  color: #878787;
  text-align: center;
  border-radius: 5px;
  font-size:0.8em;
  margin:auto;
  float: right;
  font-style: italic;
}

.actions {
  color: white;
  text-align: center;
  border-radius: 5px;
  font-size:0.8em;
  margin:auto;
  float: right;
}

.center {
  float: none;
  margin: auto;
}

ul {
  list-style-type: square;
}

li {
  font-size: 1em;
  margin: 0.5em;
}

.review {
  color: white;
  font-size: 0.8em;
  word-break: break-word;
  margin-bottom: 0px;
}

.likebutton {
  width: 3.2em;
}

input[type="checkbox"] {
  font: inherit;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid black;
  border-radius: 0.15em;
  margin-top: 1em;
}

footer {
  margin-top: 5em;
  font-size: 0.5em;
  float: right;
}

